# katagollum

./: .gitignore  Makefile  README.md  config.yaml.default  fast_config.cfg  minimal_fast.cfg  pyproject.toml  requirements.txt
prompts/: personas.yaml
scripts/: stop-services.sh
src/: __main__.py  config_loader.py  go_game.py
src/cli/: main.py
src/game/: board.py
src/katago_mcp/: gtp_client.py  server.py
src/llm/: client.py
tests/: test_board.py
web_backend/backend/: settings.py  urls.py
web_backend/game/: models.py  serializers.py  urls.py  views.py
web_backend/game/migrations/: 0001_initial.py  0002_gamestate_handicap.py
web_frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
web_frontend/app/: globals.css  layout.tsx  page.tsx
web_frontend/components/: Chat.tsx  GameSetup.tsx  GoBoard.tsx
web_frontend/lib/: api.ts
